--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 <DL><p>
     <DT><H3 ADD_DATE="1703999686" LAST_MODIFIED="1707023054">null</H3>
     <DL><p>
-        <DT><A HREF="https://www.reddit.com/r/science/comments/zvk3fa/research_shows_that_people_who_turn_to_social" ADD_DATE="1702254121" LAST_MODIFIED="1703992705">social media</A>
+        <DT><A HREF="https://www.reddit.com/r/science/comments/zvk3fa/research_shows_that_people_who_turn_to_social" ADD_DATE="1702254121" LAST_MODIFIED="1703992705">profound boredom</A>
     </DL><p>
 </DL>
