--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 	<link rel="shortcut icon" type="image/x-icon" href="./favicon.ico?v=1">
 </head>
 
-<DL><p>
-    <DT><H3 ADD_DATE="1703999686" LAST_MODIFIED="1707023054">null</H3>
-    <DL><p>
-        <DT><A HREF="https://www.reddit.com/r/science/comments/zvk3fa/research_shows_that_people_who_turn_to_social" ADD_DATE="1702254121" LAST_MODIFIED="1703992705">profound boredom</A>
-    </DL><p>
-</DL>
+<p>
+    <A HREF="https://www.reddit.com/r/science/comments/zvk3fa/research_shows_that_people_who_turn_to_social">profound boredom</A>
+</p>
+<p>
+    20 March, 2024
+    I don't know what to do with my life. Let's see what happens if I just keep learning new skills.
+    - Started <A HREF="https://www.geeksforgeeks.org/courses/geeksforgeeks-postman-api-bootcamp-winter-edition">Postman API Bootcamp</A>
+</p>
