--- a/index.html
+++ b/index.html
@@ -12,4 +12,12 @@
 
 <p>
     <A HREF="https://www.reddit.com/r/science/comments/zvk3fa/research_shows_that_people_who_turn_to_social">profound boredom</A>
+
+    <A HREF="https://blog.archive.org/">archive.org</A>
+    <A HREF="https://dariusforoux.com/articles/">darius foroux</A>
+    <A HREF="https://fs.blog/">farnam street</A>
+    <A HREF="https://www.lesswrong.com/about">less wrong</A>
+    <A HREF="https://rubenerd.com/">rubenerd</A>
+    <A HREF="https://marksaroufim.substack.com/archive?sort=new">saroufim</A>
+    <A HREF="https://www.scaruffi.com/">scaruffi</A>
 </p>
