--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
 <p>
     <A HREF="https://www.reddit.com/r/science/comments/zvk3fa/research_shows_that_people_who_turn_to_social">profound boredom</A>
+</p>
 
+<p>
+    blogs
     <A HREF="https://blog.archive.org/">archive.org</A>
     <A HREF="https://dariusforoux.com/articles/">darius foroux</A>
     <A HREF="https://fs.blog/">farnam street</A>
