--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 </p>
 
 <p>
-    blogs
-    <A HREF="https://blog.archive.org/">archive.org</A>
-    <A HREF="https://dariusforoux.com/articles/">darius foroux</A>
-    <A HREF="https://fs.blog/">farnam street</A>
-    <A HREF="https://www.lesswrong.com/about">less wrong</A>
-    <A HREF="https://rubenerd.com/">rubenerd</A>
-    <A HREF="https://marksaroufim.substack.com/archive?sort=new">saroufim</A>
+    blogs:  
+    <A HREF="https://blog.archive.org/">archive.org</A>  
+    <A HREF="https://dariusforoux.com/articles/">darius foroux</A>  
+    <A HREF="https://fs.blog/">farnam street</A>  
+    <A HREF="https://www.lesswrong.com/about">less wrong</A>  
+    <A HREF="https://rubenerd.com/">rubenerd</A>  
+    <A HREF="https://marksaroufim.substack.com/archive?sort=new">saroufim</A>  
     <A HREF="https://www.scaruffi.com/">scaruffi</A>
 </p>
