Fix formatting - third time's the charm

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 </p>
 
 <p>
-    blogs:  
+    blogs:<br>
     <A HREF="https://blog.archive.org/">archive.org</A><br>
     <A HREF="https://dariusforoux.com/articles/">darius foroux</A><br>
     <A HREF="https://fs.blog/">farnam street</A><br>
-    <A HREF="https://www.lesswrong.com/about">less wrong</A><br>
+    <A HREF="https://www.lesswrong.com/about">lesswrong</A><br>
     <A HREF="https://rubenerd.com/">rubenerd</A><br>
     <A HREF="https://marksaroufim.substack.com/archive?sort=new">saroufim</A><br>
     <A HREF="https://www.scaruffi.com/">scaruffi</A>
