--- a/index.html
+++ b/index.html
@@ -24,3 +24,12 @@
     <A HREF="https://marksaroufim.substack.com/archive?sort=new">saroufim</A><br>
     <A HREF="https://www.scaruffi.com/">scaruffi</A>
 </p>
+
+<p>
+    earth:<br>
+    <A HREF="https://www.anthropocenemagazine.org/">anthropocene</A><br>
+    <A HREF="https://www.ecowatch.com/">ecowatch</A><br>
+    <A HREF="https://grist.org/">grist</A><br>
+    <A HREF="https://heatmap.news/">heatmap</A><br>
+    <A HREF="https://znetwork.org/">znetwork</A>
+</p>
