--- a/index.html
+++ b/index.html
@@ -33,3 +33,15 @@
     <A HREF="https://heatmap.news/">heatmap</A><br>
     <A HREF="https://znetwork.org/">znetwork</A>
 </p>
+
+<h6>newsletters</h6>
+<li>
+    <a href="https://www.morningbrew.com/daily">morning brew</a>
+    <a href="https://www.chartr.co/">chartr</a>
+    <a href="https://www.interconnects.ai">interconnects ai</a>
+    <a href="https://knowablemagazine.org/newsletter-signup">knowable mag</a>
+    <a href="https://blog.nomadforless.com/subscribe">nomad for less</a>
+    <a href="https://securityllama.tech">security llama</a>
+    <a href="https://tldr.tech/signup?external_browser_redirect=true">tldr</a>
+    <a href="https://usafacts.org/signup">usafacts</a>
+</li>
