--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
     <A HREF="https://znetwork.org/">znetwork</A>
 </p>
 
-<h6>newsletters</h6>
-<li>
-    <a href="https://www.morningbrew.com/daily">morning brew</a>
-    <a href="https://www.chartr.co/">chartr</a>
-    <a href="https://www.interconnects.ai">interconnects ai</a>
-    <a href="https://knowablemagazine.org/newsletter-signup">knowable mag</a>
-    <a href="https://blog.nomadforless.com/subscribe">nomad for less</a>
-    <a href="https://securityllama.tech">security llama</a>
-    <a href="https://tldr.tech/signup?external_browser_redirect=true">tldr</a>
-    <a href="https://usafacts.org/signup">usafacts</a>
-</li>
+<h3>newsletters</h3>
+<ul>
+    <li><a href="https://www.morningbrew.com/daily">morning brew</a></li>
+    <li><a href="https://www.chartr.co/">chartr</a></li>
+    <li><a href="https://www.interconnects.ai">interconnects ai</a></li>
+    <li><a href="https://knowablemagazine.org/newsletter-signup">knowable mag</a></li>
+    <li><a href="https://blog.nomadforless.com/subscribe">nomad for less</a></li>
+    <li><a href="https://securityllama.tech">security llama</a></li>
+    <li><a href="https://tldr.tech/signup?external_browser_redirect=true">tldr</a></li>
+    <li><a href="https://usafacts.org/signup">usafacts</a></li>
+</ul>
