--- a/index.html
+++ b/index.html
@@ -34,14 +34,13 @@
     <A HREF="https://znetwork.org/">znetwork</A>
 </p>
 
-<h3>newsletters</h3>
-<ul>
-    <li><a href="https://www.morningbrew.com/daily">morning brew</a></li>
-    <li><a href="https://www.chartr.co/">chartr</a></li>
-    <li><a href="https://www.interconnects.ai">interconnects ai</a></li>
-    <li><a href="https://knowablemagazine.org/newsletter-signup">knowable mag</a></li>
-    <li><a href="https://blog.nomadforless.com/subscribe">nomad for less</a></li>
-    <li><a href="https://securityllama.tech">security llama</a></li>
-    <li><a href="https://tldr.tech/signup?external_browser_redirect=true">tldr</a></li>
-    <li><a href="https://usafacts.org/signup">usafacts</a></li>
-</ul>
+<p>
+    newsletters:</br>
+    <a href="https://www.morningbrew.com/daily">morning brew</a></br>
+    <a href="https://www.chartr.co/">chartr</a></br>
+    <a href="https://www.interconnects.ai">interconnects ai</a></br>
+    <a href="https://knowablemagazine.org/newsletter-signup">knowable mag</a></br>
+    <a href="https://blog.nomadforless.com/subscribe">nomad for less</a></br>
+    <a href="https://securityllama.tech">security llama</a></br>
+    <a href="https://usafacts.org/signup">usafacts</a>
+</p>
