--- a/index.html
+++ b/index.html
@@ -35,12 +35,15 @@
 </p>
 
 <p>
-    newsletters:</br>
-    <a href="https://www.morningbrew.com/daily">morning brew</a></br>
-    <a href="https://www.chartr.co/">chartr</a></br>
-    <a href="https://www.interconnects.ai">interconnects ai</a></br>
-    <a href="https://knowablemagazine.org/newsletter-signup">knowable mag</a></br>
-    <a href="https://blog.nomadforless.com/subscribe">nomad for less</a></br>
-    <a href="https://securityllama.tech">security llama</a></br>
-    <a href="https://usafacts.org/signup">usafacts</a>
-</p>
+    interest:<br>
+    <A HREF="https://informationisbeautiful.net/beautifulnews">beautiful news</A><br>
+    <A HREF="https://www.bellingcat.com">bellingcat</A><br>
+    <A HREF="https://bigthink.com">big think</A><br>
+    <A HREF="https://www.nature.com">nature</A><br>
+    <A HREF="https://ourworldindata.org">our world in data</A><br>
+    <A HREF="https://theprogressnetwork.org/the-daily">progress network</A><br>
+    <A HREF="https://www.rand.org">rand</A><br>
+    <A HREF="https://mitsloan.mit.edu/thinking-forward">thinking forward</A><br>
+    <A HREF="https://www.visualcapitalist.com">visual capitalist</A><br>
+    <A HREF="https://www.weforum.org/publications">weforum</A>
+</p>>
