--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
 
 <p>
     interest:<br>
-    <A HREF="https://informationisbeautiful.net/beautifulnews">beautiful news</A><br>
     <A HREF="https://www.bellingcat.com">bellingcat</A><br>
     <A HREF="https://bigthink.com">big think</A><br>
     <A HREF="https://www.nature.com">nature</A><br>
@@ -44,4 +43,17 @@
     <A HREF="https://mitsloan.mit.edu/thinking-forward">thinking forward</A><br>
     <A HREF="https://www.visualcapitalist.com">visual capitalist</A><br>
     <A HREF="https://www.weforum.org/publications">weforum</A>
+</p>
+
+<p>
+    news:<br>
+    <A HREF="https://www.axios.com">axios</A><br>
+    <A HREF="https://www.theassemblync.com">the assembly</A><br>
+    <A HREF="https://informationisbeautiful.net/beautifulnews">beautiful news</A><br>
+    <A HREF="https://ground.news/landingV7/somemorenews">ground news</A>
+    <A HREF="https://theintercept.com/technology">the intercept</A><br>
+    <A HREF="https://lemm.ee/post/13163926">help getting news</A><br>
+    <A HREF="https://www.npr.org">npr</A><br>
+    <A HREF="https://www.starnewsonline.com">star news</A><br>
+    <A HREF="https://www.whqr.org">whqr</A><br>
 </p>
