--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <A HREF="https://www.axios.com">axios</A><br>
     <A HREF="https://www.theassemblync.com">the assembly</A><br>
     <A HREF="https://informationisbeautiful.net/beautifulnews">beautiful news</A><br>
-    <A HREF="https://ground.news/landingV7/somemorenews">ground news</A>
+    <A HREF="https://ground.news/landingV7/somemorenews">ground news</A><br>
     <A HREF="https://theintercept.com/technology">the intercept</A><br>
     <A HREF="https://lemm.ee/post/13163926">help getting news</A><br>
     <A HREF="https://www.npr.org">npr</A><br>
