--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<link rel="shortcut icon" type="image/x-icon" href="./favicon.ico?v=1">
 </head>
 
+<body style="background-color: gray;">
+	
 <p>
     <A HREF="https://www.reddit.com/r/science/comments/zvk3fa/research_shows_that_people_who_turn_to_social">profound boredom</A>
 </p>
