--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
-<!--DOCTYPE NETSCAPE-Bookmark-file-1>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
-<meta http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'none'; img-src data: *; object-src 'none'"></meta>
-<TITLE>Bookmarks</TITLE>!-->
-
 <!DOCTYPE html>
 <head>
 	<title>Links</title>
-	<link rel="shortcut icon" type="image/x-icon" href="./favicon.ico?v=1">
+	<link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
+	<style>
+		body {
+			background-color: gray;
+		}
+	</style>
 </head>
-
-<body style="background-color: gray;">
-	
-<p>
+<body>
     <A HREF="https://www.reddit.com/r/science/comments/zvk3fa/research_shows_that_people_who_turn_to_social">profound boredom</A>
-</p>
+</body>
